--- a/web/css/main.css
+++ b/web/css/main.css
@@ -694,6 +694,17 @@ h2.title:before {
     margin-left: -110px;
 }
 
+ul.category-products {
+    padding-left: 10px;
+}
+
+.category-products ul {
+    padding-left: 10px;
+}
+.category-products li {
+    padding: 5px 0 5px 10px;
+}
+
 .category-products .panel {
     background-color: #FFFFFF;
     border: 0px;
@@ -703,6 +714,8 @@ h2.title:before {
     margin-bottom: 0px;
 }
 
+
+
 .category-products .panel-default .panel-heading {
     background-color: #FFFFFF;
     border: 0 none;
@@ -710,7 +723,8 @@ h2.title:before {
     padding: 5px 20px;
 }
 
-.category-products .panel-default .panel-heading .panel-title a {
+.category-products .panel-default .panel-heading .panel-title a,
+.category-products li a {
     color: #696763;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
@@ -722,7 +736,8 @@ h2.title:before {
     border-top: 0 none;
 }
 
-.category-products .panel-default .badge {
+.category-products .panel-default .badge,
+.category-products li .badge {
     background: none;
     border-radius: 10px;
     color: #696763;
