--- a/web/css/main.css
+++ b/web/css/main.css
@@ -732,6 +732,10 @@ ul.category-products {
     text-transform: uppercase;
 }
 
+.del-item {
+    cursor: pointer;
+}
+
 .panel-group .panel-heading+.panel-collapse .panel-body {
     border-top: 0 none;
 }
