Orders List in Admin panel

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2334,9 +2334,9 @@ textarea {
 
 .btn.btn-primary {
     background: #FE980F;
-    border: 0 none;
-    border-radius: 0;
-    margin-top: 16px;
+    /*border: 0 none;*/
+    /*border-radius: 0;*/
+    /*margin-top: 16px;*/
 }
 
 .blank-arrow {
